# batchImg-rembg-ComfyUI-nodes

./: README.md  __init__.py  pyproject.toml  requirements.txt
batch/: batch_rembg.py
